# mistral-hackaton2026

./: .env.example  .gitignore  HACKATHON_STATUS.md  README.md  pyproject.toml
data/case_instruction_server/: .gitignore  README.md  config.json  full_training_cases_mistral.jsonl  summary.json  summary.md
data/case_instruction_server/reviews/: wave_1201_1800.md  wave_1801_2400.md
data/examples/: train.jsonl  valid.jsonl
data/succession_e2e/: README.md  e2e_cases.jsonl  e2e_cases_train.jsonl  manifest.json
scripts/: build_succession_corpus.sh  run_case_instruction_server.sh  train.sh
src/ministral_ft/: __init__.py  build_case_corpus.py  case_instruction_server.py  data.py  e2e_case_corpus.py  train.py
